--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TWM 整合呈現版 - 提示詞產生器 v3</title>
+    <title>電信業技術專業提示詞產生器 - 整合呈現版 v3</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -29,7 +29,7 @@
     <div id="app" class="p-4 md:p-8 max-w-full mx-auto">
         <header class="text-center mb-10">
             <h1 class="text-3xl font-extrabold text-gray-900">
-                <span class="text-twm-primary">TWM Tech</span> 提示詞產生器 - 整合呈現版
+                <span class="text-twm-primary">電信業技術專業</span> 提示詞產生器 - 整合呈現版
             </h1>
             <p class="text-gray-500 mt-2">五大領域、三大場景與 AI 工具同時呈現</p>
         </header>
@@ -483,7 +483,10 @@
             renderLLMButtons(basePrompt); 
             
             if (selectedTemplate && basePrompt) {
-                promptMetadata.textContent = `領域: ${selectedDomain.domainName} | 場景: ${selectedScenario.scenarioName} | 範本: No.${selectedDomain.scenarios.filter(s => s.scenarioId === selectedScenario.scenarioId).indexOf(selectedTemplate) + 1} / 10`;
+                // 修正了 promptMetadata 的顯示
+                const scenarioTemplates = selectedDomain.scenarios.filter(s => s.scenarioId === selectedScenario.scenarioId);
+                const templateIndex = scenarioTemplates.indexOf(selectedTemplate) + 1;
+                promptMetadata.textContent = `領域: ${selectedDomain.domainName} | 場景: ${selectedScenario.scenarioName} | 範本: No.${templateIndex} / ${scenarioTemplates.length}`;
             } else {
                 promptMetadata.textContent = '';
             }
